# ROSC

./: .editorconfig  .gitignore  CHANGELOG.ja.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.ja.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  SECURITY.ja.md  SECURITY.md  compose.yaml
.agent/: AGENTS.md  README.md  handoff-template.md  working-agreement.md
.agents/: project-map.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  delivery-task.yml  design-proposal.yml
.github/scripts/: gemini-pr-review.mjs
.github/workflows/: docs-quality.yml  gemini-pr-review.yml  pr-governance.yml  repo-sanity-matrix.yml
.skill/: README.md  implementation-planner.md
.skills/: SKILL.md  compatibility-reviewer.md  design-guardian.md  docs-maintainer.md  issue-curator.md
apps/rosc-broker/: Cargo.toml
apps/rosc-broker/src/: cli.rs  commands.rs  config_supervisor.rs  config_telemetry.rs  control_http.rs  control_plane.rs  control_service.rs  health_service.rs  launch_profile.rs  lib.rs  main.rs  managed_proxy.rs  operator_attention.rs  operator_board.rs  operator_brief.rs  operator_casebook.rs  operator_cockpit.rs  operator_context.rs  operator_dashboard.rs  operator_diagnostics.rs  operator_dossier.rs  operator_focus.rs  operator_handoff.rs  operator_history.rs  operator_incident_digest.rs  operator_incidents.rs  operator_lens.rs  operator_mission.rs  operator_overview.rs  operator_policy.rs  operator_readiness.rs  operator_recovery.rs  operator_runbook.rs  operator_runtime_summary.rs  operator_snapshot.rs  operator_timeline.rs  operator_trace.rs  operator_triage.rs  operator_worklist.rs  operator_workspace.rs  (+5 more)
apps/rosc-broker/src/commands/: common.rs  config.rs  mod.rs  runtime.rs
apps/rosc-broker/src/commands/config/: inspect.rs  maintenance.rs  mod.rs  services.rs
apps/rosc-broker/src/commands/runtime/: live.rs  mod.rs  sidecars.rs
apps/rosc-broker/src/commands/runtime/sidecars/: mod.rs  tests.rs
apps/rosc-broker/src/control_http/: mod.rs  request.rs  response.rs  routes.rs
apps/rosc-broker/src/control_http/dashboard/: app.css  app.js  dashboard-render.js  dashboard-state.js  index.html  mod.rs
apps/rosc-broker/src/control_http/response/: builders.rs  mod.rs  payloads.rs  transport.rs
apps/rosc-broker/src/control_plane/: managed_proxy.rs  mod.rs  shared.rs  supervisor.rs  types.rs
apps/rosc-broker/src/operator_dashboard/: details.rs  mod.rs  traffic.rs
apps/rosc-broker/src/operator_policy/: collect.rs  mod.rs  report.rs  types.rs
apps/rosc-broker/src/proxy_app/: build.rs  control.rs  dispatch.rs  mod.rs
apps/rosc-broker/src/proxy_status/: build.rs  mod.rs  runtime.rs  types.rs
apps/rosc-broker/tests/: cli_json.rs  config_reload.rs  control_service.rs  control_service_core.rs  control_service_recovery.rs  control_service_robustness.rs  health_service.rs  managed_proxy.rs  operator_policy.rs  operator_policy_report.rs  operator_views.rs  proxy_reload_supervisor.rs  proxy_status.rs  udp_proxy.rs
apps/rosc-broker/tests/common/: control_service.rs  mod.rs
crates/rosc-config/: Cargo.toml
crates/rosc-config/src/: lib.rs
crates/rosc-config/tests/: config.rs
crates/rosc-osc/: Cargo.toml
crates/rosc-osc/src/: lib.rs
crates/rosc-osc/tests/: conformance.rs
crates/rosc-packet/: Cargo.toml
crates/rosc-packet/src/: lib.rs
crates/rosc-recovery/: Cargo.toml
crates/rosc-recovery/src/: lib.rs
crates/rosc-recovery/tests/: recovery.rs
crates/rosc-route/: Cargo.toml
crates/rosc-route/src/: lib.rs
crates/rosc-route/tests/: routing.rs
crates/rosc-runtime/: Cargo.toml
crates/rosc-runtime/src/: lib.rs
crates/rosc-runtime/tests/: health_http.rs  queue.rs
crates/rosc-telemetry/: Cargo.toml
crates/rosc-telemetry/src/: lib.rs  recent_events.rs
docker/dev/: Dockerfile
docs/: README.ja.md  README.md
docs/concepts/en/: README.md  (+18 more)
examples/: phase-01-basic-changed.toml  phase-01-basic.toml
fixtures/benchmarks/: README.ja.md  README.md  context-template.json  workload-catalog.json
fixtures/conformance/: README.ja.md  README.md  catalog.json
(+131 files in other folders)
