[workspace]
members = [
  "apps/rosc-broker",
  "crates/rosc-config",
  "crates/rosc-osc",
  "crates/rosc-packet",
  "crates/rosc-recovery",
  "crates/rosc-route",
  "crates/rosc-runtime",
  "crates/rosc-telemetry",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.93.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bitflags = "2.9.4"
clap = { version = "4.5.48", features = ["derive"] }
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9.7"
