[package]
name = "rosc-broker"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
rosc-config = { path = "../../crates/rosc-config" }
rosc-runtime = { path = "../../crates/rosc-runtime" }
rosc-telemetry = { path = "../../crates/rosc-telemetry" }
tokio.workspace = true
